[project]
name = "family-planner-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.128.0",
    "langchain>=1.2.8",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-redis>=0.3.6",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "redis>=7.1.1",
    "tavily-python>=0.7.22",
    "tenacity>=9.1.2",
    "uvicorn>=0.40.0",
]
